<?xml version="1.0"?>
<package>
  <name>rtabmap_sensorFusion</name>
  <version>0.0.0</version>
  <description>Sensor fusion for Asus and IMU with RTABmap</description>
  
  <author>Mahsa Parsapour</author>
  <maintainer email="mahsa.parsapour@gmail.com">Mahsa Parsapour</maintainer> >

  <license>BSD</license> 

<buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
